arbi_agent/model/parser/GeneralizedListParser.py
# Generated from c:\Users\sdd25\Desktop\Work\PythonArbiFramework\Python-Arbi-Framework\arbi_agent\model\parser\GeneralizedList.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class GeneralizedListParser ( Parser ):

    grammarFileName = "GeneralizedList.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'#('" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "INTEGER", "FLOAT", "IDENTIFIER", "VARIABLE", 
                      "SPECIAL_KEYWORD", "STRING" ]

    RULE_generalized_list = 0
    RULE_expression_list = 1
    RULE_expression = 2
    RULE_value = 3
    RULE_variable = 4
    RULE_function = 5

    ruleNames =  [ "generalized_list", "expression_list", "expression", 
                   "value", "variable", "function" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    WS=4
    INTEGER=5
    FLOAT=6
    IDENTIFIER=7
    VARIABLE=8
    SPECIAL_KEYWORD=9
    STRING=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Generalized_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id = None # Token
            self.exp_list = None # Expression_listContext

        def IDENTIFIER(self):
            return self.getToken(GeneralizedListParser.IDENTIFIER, 0)

        def expression_list(self):
            return self.getTypedRuleContext(GeneralizedListParser.Expression_listContext,0)


        def getRuleIndex(self):
            return GeneralizedListParser.RULE_generalized_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGeneralized_list" ):
                listener.enterGeneralized_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGeneralized_list" ):
                listener.exitGeneralized_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGeneralized_list" ):
                return visitor.visitGeneralized_list(self)
            else:
                return visitor.visitChildren(self)




    def generalized_list(self):

        localctx = GeneralizedListParser.Generalized_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_generalized_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.match(GeneralizedListParser.T__0)
            self.state = 13
            localctx.id = self.match(GeneralizedListParser.IDENTIFIER)
            self.state = 14
            localctx.exp_list = self.expression_list()
            self.state = 15
            self.match(GeneralizedListParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.exp = None # ExpressionContext

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeneralizedListParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GeneralizedListParser.ExpressionContext,i)


        def getRuleIndex(self):
            return GeneralizedListParser.RULE_expression_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_list" ):
                listener.enterExpression_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_list" ):
                listener.exitExpression_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_list" ):
                return visitor.visitExpression_list(self)
            else:
                return visitor.visitChildren(self)




    def expression_list(self):

        localctx = GeneralizedListParser.Expression_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GeneralizedListParser.T__0) | (1 << GeneralizedListParser.T__2) | (1 << GeneralizedListParser.INTEGER) | (1 << GeneralizedListParser.FLOAT) | (1 << GeneralizedListParser.VARIABLE) | (1 << GeneralizedListParser.SPECIAL_KEYWORD) | (1 << GeneralizedListParser.STRING))) != 0):
                self.state = 17
                localctx.exp = self.expression()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.val = None # ValueContext
            self.var = None # VariableContext
            self.func = None # FunctionContext
            self.gl = None # Generalized_listContext

        def value(self):
            return self.getTypedRuleContext(GeneralizedListParser.ValueContext,0)


        def variable(self):
            return self.getTypedRuleContext(GeneralizedListParser.VariableContext,0)


        def function(self):
            return self.getTypedRuleContext(GeneralizedListParser.FunctionContext,0)


        def generalized_list(self):
            return self.getTypedRuleContext(GeneralizedListParser.Generalized_listContext,0)


        def getRuleIndex(self):
            return GeneralizedListParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = GeneralizedListParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.state = 27
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GeneralizedListParser.INTEGER, GeneralizedListParser.FLOAT, GeneralizedListParser.SPECIAL_KEYWORD, GeneralizedListParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                localctx.val = self.value()
                pass
            elif token in [GeneralizedListParser.VARIABLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                localctx.var = self.variable()
                pass
            elif token in [GeneralizedListParser.T__2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                localctx.func = self.function()
                pass
            elif token in [GeneralizedListParser.T__0]:
                self.enterOuterAlt(localctx, 4)
                self.state = 26
                localctx.gl = self.generalized_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id = None # Token

        def INTEGER(self):
            return self.getToken(GeneralizedListParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(GeneralizedListParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(GeneralizedListParser.STRING, 0)

        def SPECIAL_KEYWORD(self):
            return self.getToken(GeneralizedListParser.SPECIAL_KEYWORD, 0)

        def getRuleIndex(self):
            return GeneralizedListParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = GeneralizedListParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            localctx.id = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GeneralizedListParser.INTEGER) | (1 << GeneralizedListParser.FLOAT) | (1 << GeneralizedListParser.SPECIAL_KEYWORD) | (1 << GeneralizedListParser.STRING))) != 0)):
                localctx.id = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id = None # Token

        def VARIABLE(self):
            return self.getToken(GeneralizedListParser.VARIABLE, 0)

        def getRuleIndex(self):
            return GeneralizedListParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = GeneralizedListParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            localctx.id = self.match(GeneralizedListParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id = None # Token
            self.exp_list = None # Expression_listContext

        def IDENTIFIER(self):
            return self.getToken(GeneralizedListParser.IDENTIFIER, 0)

        def expression_list(self):
            return self.getTypedRuleContext(GeneralizedListParser.Expression_listContext,0)


        def getRuleIndex(self):
            return GeneralizedListParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = GeneralizedListParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(GeneralizedListParser.T__2)
            self.state = 34
            localctx.id = self.match(GeneralizedListParser.IDENTIFIER)
            self.state = 35
            localctx.exp_list = self.expression_list()
            self.state = 36
            self.match(GeneralizedListParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





